fixed image getting cut off.

--- a/CSS/csspicknik.css
+++ b/CSS/csspicknik.css
@@ -622,7 +622,7 @@ a {
 }
 
 .heroImg {
-    width: 120%;
+    width: 100%;
     max-width: 680px;
 }
 
